<resources>
    <string name="app_name">SecondHand</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="input_password">输入密码</string>
    <string name="input_account">输入账号</string>
    <string name="login">登录</string>
    <string name="login_space">登&#160;&#160;&#160;&#160;录</string>
    <string name="register_account">注册账号</string>
    <string name="all_goods">所有商品</string>
    <string name="user">用户</string>
    <string name="my_goods">我的商品</string>
    <string name="add_goods">添加商品</string>
    <string name="exit_login">退出登录</string>
</resources>
