<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/v_top"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <ImageView
        android:id="@+id/img_title"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:clickable="false"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/img_title"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/input_account"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="16dp"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/et_account"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="16dp"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/et_password"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_corner"
        android:gravity="center"
        android:text="@string/login_space"
        android:textColor="#ffffff" />

    <TextView
        android:gravity="center"
        android:background="@drawable/shape_corner"
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_login"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/register_account"
        android:textColor="#ffffff"
        tools:ignore="SpUsage" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/img_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:src="@mipmap/ic_launcher" />
</RelativeLayout>